--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Github Page</title>
     <link rel="stylesheet" href="style.css"/>
     <h1>Danika Ragnhild, CSM</h1>
-    <h2>Product Manager</h2>
-    <h2>Minneapolis, MN</h2>
+    <h2>Product Manager
+    Minneapolis, MN</h2>
     <h2>danika.ragnhild@gmail.com</h2>
     <h2>218-849-4341</h2>
    </head>
