--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
    </head>
 
   <body>
-    <p><strong>Expertise</strong></p>
+    <h2><strong>Expertise</strong></h2>
+    <p>
     <ul>
       <li><strong>Planning</strong>- Certified Scrum Master, Agile/Lean Frameworks, asset tracking, sprint boards, core pillars, Gantt charts, forums, scrums</li>
       <li><strong>Meetings</strong>- Team meetings, scheduling, planning, cross discipline meetings (QA/Development, Design/Development, Team Leads), 1-on-1s, work jams, online meetings, milestone reviews, yearly resource roadmap planning, executive reviews</li>
       <li><strong>Presentations</strong>- Pitch decks, elevator pitchers, art reference, concepts, wire frames, competitive analysis, feature sets</li>
       <li><strong>Schedules</strong>- Rapidly adjust for slippage, meticulous about stayin on top of, and working with, each team member's schedule</li>
       <li><strong>Technology</strong>- C#, HTML, Quartz, Visual Studio, Unity, TOrtoise SVN, GitHub, Slack, Asana, Trello, JIRA, Tableau, Excel, Word, PowerPoint, GIMP</li>
+      </p>
+    <h2><strong>Work Experience</strong></h2>
+    <p><strong>Paraprofessional</strong></p>
+    <p>Venture Academy, Minneapolis, MN
+    <ul>
+      <li>Successfully fundraised over  $6,000 over 3 campaigns and increased donor database by 1500 individuals</li>
+      <li>Adapted Math and Science curriculum of 16 students with special needs</li>
+      <li>Selected classroom computers based on hardware needs and cost efficiency</li>
+    </ul>
+    </p>
+  
     
-    <p>That should get you started</p>
+    
   </body>
 </html>
