Finished basic outline

--- a/index.html
+++ b/index.html
@@ -22,14 +22,39 @@
       </p>
     <h2><strong>Work Experience</strong></h2>
     <p><strong>Paraprofessional</strong></p>
-    <p>Venture Academy, Minneapolis, MN
+    <p>Venture Academy, Minneapolis, MN</p>
+      <p1>May 2016-Present</p1>
+    <p>
     <ul>
       <li>Successfully fundraised over  $6,000 over 3 campaigns and increased donor database by 1500 individuals</li>
       <li>Adapted Math and Science curriculum of 16 students with special needs</li>
       <li>Selected classroom computers based on hardware needs and cost efficiency</li>
     </ul>
     </p>
-  
+    </p>
+  <p><strong>Project Manager</strong></p>
+<p>NORTH GAMES, Minneapolis, MN</p>
+<p1>May 2014 - August 2016</p1>
+    <ul>
+      <li>Managed team of 10 people, running 2 concurrent sprints on up to 4 work streams.</li>
+      <li>Implemented Agile SDLC.  Shaped 2 week sprints to allow rapid prototyping of features.</li>
+      <li>Focused scope of projects using core pillars as a guide.</li>
+      <li>Ported games for various devices (iOS, MacOS, Xbox One, etc...</li>
+      <li>Created User stories and tasks with development team.</li>
+      <li>Managed developer relations with Sony, Microsoft, and Nintendo.</li>
+    </ul>
+    </p>
+ <p><strong>Interactive Media Manager</strong></p>
+<p>Pangea World Theater, Minneapolis, MN</p>
+<p1>Aug 2012 - Jan 2015</p1>
+    <ul>
+      <li>Led 4 teams of 8-12 people over 6 different projects.</li>
+      <li>Coded inhouse software for live performances.</li>
+      <li>Led collaboration between artists and developers.</li>    </ul>
+    </p>
+<h2><strong>Education</strong></h2>
+<p><strong>Bachelor of Arts, Playwriting</strong></p>
+<p>Columbia College Chicago 2011</p>
     
     
   </body>
