--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    </head>
 
   <body>
-    <h2><strong>Expertise</strong></h2>
+    <p><h2><strong>Expertise</strong></h2></p>
     <p>
     <ul>
       <li><strong>Planning</strong>- Certified Scrum Master, Agile/Lean Frameworks, asset tracking, sprint boards, core pillars, Gantt charts, forums, scrums</li>
