--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><strong>Technology</strong>- C#, HTML, Quartz, Visual Studio, Unity, TOrtoise SVN, GitHub, Slack, Asana, Trello, JIRA, Tableau, Excel, Word, PowerPoint, GIMP</li>
       </p>
     <h2><strong>Work Experience</strong></h2>
-    <p><strong>Paraprofessional</strong></p>
+    <p3><strong>Paraprofessional</strong></p3>
     <p>Venture Academy, Minneapolis, MN</p>
       <p1>May 2016-Present</p1>
     <p>
@@ -31,7 +31,7 @@
       <li>Selected classroom computers based on hardware needs and cost efficiency</li>
     </ul>
     </p>
-  <p><strong>Project Manager</strong></p>
+  <p3><strong>Project Manager</strong></p3>
 <p>NORTH GAMES, Minneapolis, MN</p>
 <p1>May 2014 - August 2016</p1>
     <ul>
@@ -43,7 +43,7 @@
       <li>Managed developer relations with Sony, Microsoft, and Nintendo.</li>
     </ul>
     </p>
- <p><strong>Interactive Media Manager</strong></p>
+ <p3><strong>Interactive Media Manager</strong></p3>
 <p>Pangea World Theater, Minneapolis, MN</p>
 <p1>Aug 2012 - Jan 2015</p1>
     <ul>
