--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" href="style.css"/>
     <h1>Danika Ragnhild, CSM</h1>
     <h2>Product Manager</h2>
-    <h3>danika.ragnhild@gmail.com</h3>
     <h2>Minneapolis, MN</h2>
-    <h3>218-849-4341</h3>
+    <h3>danika.ragnhild@gmail.com   218-849-4341</h3>
    </head>
 
   <body>
