--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
   <body>
     <p><h2><strong>Expertise</strong></h2></p>
-    <p>
     <ul>
       <li><strong>Planning</strong>- Certified Scrum Master, Agile/Lean Frameworks, asset tracking, sprint boards, core pillars, Gantt charts, forums, scrums</li>
       <li><strong>Meetings</strong>- Team meetings, scheduling, planning, cross discipline meetings (QA/Development, Design/Development, Team Leads), 1-on-1s, work jams, online meetings, milestone reviews, yearly resource roadmap planning, executive reviews</li>
       <li><strong>Presentations</strong>- Pitch decks, elevator pitchers, art reference, concepts, wire frames, competitive analysis, feature sets</li>
       <li><strong>Schedules</strong>- Rapidly adjust for slippage, meticulous about stayin on top of, and working with, each team member's schedule</li>
       <li><strong>Technology</strong>- C#, HTML, Quartz, Visual Studio, Unity, TOrtoise SVN, GitHub, Slack, Asana, Trello, JIRA, Tableau, Excel, Word, PowerPoint, GIMP</li>
-      </p>
+      </ul>
     <h2><strong>Work Experience</strong></h2>
     <p3><strong>Paraprofessional</strong></p3>
     <p>Venture Academy, Minneapolis, MN</p>
@@ -28,7 +27,6 @@
       <li>Adapted Math and Science curriculum of 16 students with special needs</li>
       <li>Selected classroom computers based on hardware needs and cost efficiency</li>
     </ul>
-    </p>
   <p3><strong>Project Manager</strong></p3>
 <p>NORTH GAMES, Minneapolis, MN</p>
 <p1>May 2014 - August 2016</p1>
@@ -40,15 +38,14 @@
       <li>Created User stories and tasks with development team.</li>
       <li>Managed developer relations with Sony, Microsoft, and Nintendo.</li>
     </ul>
-    </p>
  <p3><strong>Interactive Media Manager</strong></p3>
 <p>Pangea World Theater, Minneapolis, MN</p>
 <p1>Aug 2012 - Jan 2015</p1>
     <ul>
       <li>Led 4 teams of 8-12 people over 6 different projects.</li>
       <li>Coded inhouse software for live performances.</li>
-      <li>Led collaboration between artists and developers.</li>    </ul>
-    </p>
+      <li>Led collaboration between artists and developers.</li>    
+  </ul>
 <h2><strong>Education</strong></h2>
 <p><strong>Bachelor of Arts, Playwriting</strong></p>
 <p>Columbia College Chicago 2011</p>
